using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorKey
{
    public const string Speed = "Speed";
    public const string Jump = "Jump";
    public const string Grounded = "Grounded";
    public const string VerticalSpeed = "vSpeed";
    public const string Hurt = "Hurt";
    public const string Climb = "Climb";
    public const string ClimbSpeed = "ClimbSpeed";
}
